# fastapi_zero

./: .gitignore  LICENSE  README.md  pyproject.toml
fast_zero/: alembic.ini  app.py  models.py  pyproject.toml  settings.py
fast_zero/fast_zero/: app.py  schemas.py  security.py
fast_zero/fast_zero/routes/: auth.py  users.py
fast_zero/migrations/: env.py
fast_zero/migrations/versions/: 9f148ec07a8c_create_users_table.py
fast_zero/tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
migrations/versions/: 40b7d35bff53_create_users_table.py  45df043a8004_create_table_cadastro_usuarios.py  c5508815ec81_create_column_update_at_table_users.py
tests/: conftest.py  test_app.py  test_models.py
